fix: add main page header padding to article header for perfect vertical alignment

--- a/style.css
+++ b/style.css
@@ -595,6 +595,7 @@ footer {
   position: relative;
   min-height: 64px;
   width: 100%;
+  padding: 1.2em clamp(0.7em, 4vw, 2em) 0.7em clamp(0.7em, 4vw, 2em);
 }
 
 
